[gd_scene load_steps=2 format=3 uid="uid://p3nf4gwmvex1"]

[ext_resource type="Script" uid="uid://bgxrj7djdymoy" path="res://components/apps/lifestylist/lifestyle_row.gd" id="1_k3nky"]

[node name="LifestyleRow" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16
script = ExtResource("1_k3nky")
layout_mode = 2

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Category"

[node name="Dropdown" type="OptionButton" parent="."]
focus_mode = 0
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="CostLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "$cost"

[node name="EffectsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "effects"
